--- a/ipvps.conf
+++ b/ipvps.conf
@@ -1,34 +1,2 @@
 ### USER  ID  VALIDITY  IPVPS
-### sha2 660640 LIFETIME 103.83.157.190
-### KLNET 681066 LIFETIME 103.123.239.131
-### MELBI2 230630 LIFETIME 91.192.81.209
-### MELBI3 13954 LIFETIME 206.189.34.244
-### DO7 999777 LIFETIME 139.59.247.71
-### MB2 3954 LIFETIME 91.192.81.159
-
-### SG8 888888 LIFETIME 159.65.1.146
-### SG9 999998 LIFETIME 139.59.98.70
-### SG10 101010 LIFETIME 159.89.200.177
-### SG11 260723 LIFETIME 146.190.87.137
-### SG12 190723 LIFETIME 206.189.46.229
-### fixxx 240723 LIFETIME 128.199.154.138
-
-### SHIN 124217 LIFETIME 124.217.251.15
-### SHIN2 20230630 LIFETIME 124.217.225.105
-### SHIN3 20230717 LIFETIME 124.217.251.234
-### SHIN4 20230804 LIFETIME 124.217.246.93
-### SHIN5 20230808 LIFETIME 124.217.251.192
-
-
-### Spencer 717012 LIFETIME 174.138.24.6
-
-### Candravpnz 139556 LIFETIME 43.156.33.47
-### Candravpnz2 230717 LIFETIME 203.175.11.247
-### danish 20230624 LIFETIME 34.101.222.247
-### GIGABIT 139556 LIFETIME 202.176.4.166
-### GIGABIT 139556 LIFETIME 202.176.4.165
-### GIGABIT 139556 LIFETIME 202.176.4.164
-### GIGABIT 139556 LIFETIME 202.176.4.163
-### GIGABIT 139556 LIFETIME 202.176.4.162
-### GIGABIT 139556 LIFETIME 202.176.4.161
-
+### RRQWE 20021201 LIFETIME 45.77.41.36
