--- a/ipvps.conf
+++ b/ipvps.conf
@@ -1,3 +1,4 @@
 ### USER  ID  VALIDITY  IPVPS
 ### RRQWE 20021201 LIFETIME 45.77.41.36
 ### RRQ1 20021201 LIFETIME 45.76.162.158
+### rrq 20021201 LIFETIME 103.172.204.77
